Fix heading link getting clipped when zoomed
On the details page, the "¶" was clipped if you zoomed in.

--- a/site/_sass/jekyll-theme-slate.scss
+++ b/site/_sass/jekyll-theme-slate.scss
@@ -285,7 +285,7 @@ Full-Width Styles
 .inner {
   position: relative;
   max-width: 1000px;
-  padding: 20px 10px;
+  padding: 20px 2em;
   margin: 0 auto;
 }
 
